test/errors/syntax2.input.asm

* = $801

!macro foo(a, b) {
    lda #a
    lda #b
}

main:
    foo(1)
